Implement claim/group/user level permissions. Add filter_claims to be able to limit token size/scope. Add create_stoke_claims config to automatically create new stoke claims. Update admin UI to use new features.
